# Hydrangea

./: .gitignore  README.md  defect.csv  defect.xlsx  pyproject.toml  trans.py
db/: 0xk1h0-PentestGPT-exceeding_llm_content_limit.yaml  0xk1h0-PentestGPT-insufficient_history_management.yaml  0xk1h0-PentestGPT-missing_llm_input_format_validation.yaml  0xk1h0-PentestGPT-sketchy_error_handling-case1.yaml  0xk1h0-PentestGPT-sketchy_error_handling-case2.yaml  0xk1h0-PentestGPT-unclear_context_in_prompt.yaml  ATheorell-AutoGPTArenaHack-absence_of_final_output.yaml  ATheorell-AutoGPTArenaHack-conflicting_knowledge_entries.yaml  ATheorell-AutoGPTArenaHack-exceeding_llm_content_limit-case1.yaml  ATheorell-AutoGPTArenaHack-exceeding_llm_content_limit-case10.yaml  ATheorell-AutoGPTArenaHack-exceeding_llm_content_limit-case11.yaml  ATheorell-AutoGPTArenaHack-exceeding_llm_content_limit-case2.yaml  ATheorell-AutoGPTArenaHack-exceeding_llm_content_limit-case3.yaml  ATheorell-AutoGPTArenaHack-exceeding_llm_content_limit-case4.yaml  ATheorell-AutoGPTArenaHack-exceeding_llm_content_limit-case5.yaml  ATheorell-AutoGPTArenaHack-exceeding_llm_content_limit-case6.yaml  ATheorell-AutoGPTArenaHack-exceeding_llm_content_limit-case7.yaml  ATheorell-AutoGPTArenaHack-exceeding_llm_content_limit-case8.yaml  ATheorell-AutoGPTArenaHack-exceeding_llm_content_limit-case9.yaml  ATheorell-AutoGPTArenaHack-imprecise_knowledge_retrieval.yaml  ATheorell-AutoGPTArenaHack-inefficient_memory_management.yaml  ATheorell-AutoGPTArenaHack-insufficient_history_management-case1.yaml  (+846 more)
hydrangea_cli/: __init__.py  (+1 more)
(+17 files in other folders)
