[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hydrangea-cli"
version = "0.1.0"
description = "Hydrangea CLI - Command line tool for querying Hydrangea dataset"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "typer>=0.9.0",
    "pyyaml>=6.0",
    "pandas>=1.3.0",
    "openpyxl>=3.0.0",
]

[project.scripts]
hydrangea = "hydrangea_cli.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["hydrangea_cli*"]
